<resources>
    <string name="app_name">JOBS MADE EASY</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_staff">StaffActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_staff">STAFF NAME</string>
    <string name="nav_header_subtitle_staff">emp-id:234234</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_post">Post a Job</string>
    <string name="menu_view">View Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="nav_header_title_student">Student Name</string>
    <string name="nav_header_subtitle_student">s536273@nwmissouri.edu</string>
    <string name="menu_myjobs">My Jobs</string>
    <string name="menu_search">Search</string>
    <string name="menu_major">Major</string>
    <string name="menu_profile_student">Profile</string>
    <string name="menu_Help">Help</string>
</resources>
