<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/menu_post" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_visibility_black_24dp"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
