<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sp2020group5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sp2020group5.ui.gallery.GalleryFragment"
        android:label="Post a Job"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sp2020group5.ui.slideshow.SlideshowFragment"
        android:label=""
        tools:layout="View Jobs" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.sp2020group5.ui.tools.ToolsFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.sp2020group5.ui.share.ShareFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.sp2020group5.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>