<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sp2020group5.ui.staff_home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/staff_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sp2020group5.ui.staff_post.GalleryFragment"
        android:label="Post a Job"
        tools:layout="@layout/staff_post" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sp2020group5.ui.staff_view.SlideshowFragment"
        android:label="view"
        tools:layout="View Jobs" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.sp2020group5.ui.staff_profile.ToolsFragment"
        android:label="Profile"
        tools:layout="@layout/staff_profile" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.sp2020group5.ui.staff_help.ShareFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/staff_help" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.sp2020group5.ui.staff_send.SendFragment"
        android:label="@string/menu_profile_student"
        tools:layout="@layout/staff_send" />
</navigation>